@@ -1,1 +1,1 @@
-LINBO 2.3.66-0
+LINBO 2.3.66-1
